force-app/main/default/objects/Partner_Management__c/Partner_Management__c.object-meta.xml
<CustomObject>
    <description>Dec 19 2022 creation date. We expect multiple teams to use this object to manage their relationships with internal and external partners. Project rollout begins with CRPS which is under Academic Services.</description>
    <label>Partner Management</label>
    <nameField>
        <label>Partner Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>