force-app/main/default/objects/Partner_Management__c/fields/College_or_Business__c.field-meta.xml
<CustomField>
    <fullName>College_or_Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the principal/required field for this PM.</description>
    <inlineHelpText>For ease of reference, this field is required. College or Business (or Educational Institution)</inlineHelpText>
    <label>College or Business</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.Id</field>
            <operation>equals</operation>
            <value>0126g000000iPoCAAU,0126g00000118eaAAA,0126g00000118eZAAQ</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Management</relationshipLabel>
    <relationshipName>Partner_Management</relationshipName>
    <type>Lookup</type>
</CustomField>