force-app/main/default/objects/Partner_Management__c/fields/CRPS_Notes__c.field-meta.xml
<CustomField>
    <fullName>CRPS_Notes__c</fullName>
    <description>Notes viewable only by CRPS (Academic Services) Profile and Sys Admin</description>
    <inlineHelpText>Notes viewable only by Academic Services Profile and Sys Admin</inlineHelpText>
    <label>CRPS Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>