force-app/main/default/objects/Partner_Management__c/fields/CSU_Team__c.field-meta.xml
<CustomField>
    <fullName>CSU_Team__c</fullName>
    <label>CSU Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRPS</fullName>
            </value>
            <value>
                <fullName>Professional Education</fullName>
            </value>
            <value>
                <fullName>Marketing Communications</fullName>
            </value>
            <value>
                <fullName>Office of the Vice President</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>