force-app/main/default/objects/Partner_Management__c/fields/Level_or_Type__c.field-meta.xml
<CustomField>
    <fullName>Level_or_Type__c</fullName>
    <inlineHelpText>Your PRIMARY working relationship: 1. Program or 2. Dept or 3. College or Business or Educational Institution</inlineHelpText>
    <label>College, Business, Dept or Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>College/Business/Educational</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>