force-app/main/default/objects/Partner_Management__c/fields/PM_AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>PM_AutoNumber__c</fullName>
    <description>A helper field that should not be on the layout, this is used in conjunction with the naming convention field</description>
    <displayFormat>{00000}</displayFormat>
    <label>PM AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>