force-app/main/default/objects/Partner_Management__c/fields/PM_Name_formula__c.field-meta.xml
<CustomField>
    <fullName>PM_Name_formula__c</fullName>
    <description>Creating a field to be used in the flow to name the object itself, was: LEFT(Account__r.Name, 7) &amp; &quot; - &quot; &amp; &quot;PartnerManagment&quot;
This field should be hidden, and have updated the formula since going live, was &quot;PartnerMgmt&quot; &amp; &quot; - &quot; &amp; College_or_Business__r.Name
last update Feb 1 (Easton)</description>
    <formula>&quot;PartnerMgmt&quot; &amp; &quot; - &quot; &amp;   Picklist_Mapping__c  &amp; &quot; - &quot; &amp; PM_AutoNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Created for the flow to rename the object itself</inlineHelpText>
    <label>PM Name formula</label>
    <type>Text</type>
</CustomField>