force-app/main/default/objects/Partner_Management__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dec 19 2022 creation date. Jan 6 2023 just removed the filter, in working with CRPS we found the &quot;shared with OEE&quot; was preventing us from finding the right person.</description>
    <inlineHelpText>Optional, your primary contact in this instance</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Management</relationshipLabel>
    <relationshipName>Partner_Management</relationshipName>
    <type>Lookup</type>
</CustomField>