force-app/main/default/objects/Partner_Management__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The intention of this field is to indicate a partner mgmt record that is about the Program, not the Dept, College, or Business Level, thus, the Dept can be skipped</description>
    <inlineHelpText>Is the work primarily with the Program? Complete this field and the Department.</inlineHelpText>
    <label>Program</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.Id</field>
            <operation>equals</operation>
            <value>0126g00000118eWAAQ</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Management (Program)</relationshipLabel>
    <relationshipName>Program_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>