force-app/main/default/objects/Partner_Management__c/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the staff member who manages this relationship</inlineHelpText>
    <label>Relationship Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>College Relations and Program Strategy</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Management</relationshipName>
    <type>Lookup</type>
</CustomField>