force-app/main/default/objects/Partner_Management__c/fields/Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Synopsis__c</fullName>
    <inlineHelpText>Be sure to add relevant dates and your initials</inlineHelpText>
    <label>Synopsis</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>