force-app/main/default/objects/Partner_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CSU_Team__c</columns>
    <columns>Relationship_Manager__c</columns>
    <columns>Synopsis__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>